--- a/nas/index.html
+++ b/nas/index.html
@@ -60,7 +60,7 @@
             colorbox=["#eeeeee"];
             arr=[
                 //["0网址","1标题","2简介","颜色","4图标url（可选）"],
-                [mainurl+"8123","HomeAssistant","HASS8123","#6b5b95","icon/homeassistant.svg"],
+                [mainurl+"8123","HASS","智能家居8123","#6b5b95","icon/homeassistant.svg"],
                 [mainurl+"8096","影音中心","家庭影院8096","#6b5b95","icon/Jellyfin_A.png"],
                 [mainurl+"8063","MT相册","MT相册8063","#6b5b95","icon/mtphotos.png"],
                 [mainurl+"8082","VSCode","VSCode8082","#6b5b95","icon/vsc.svg"],
