--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 									<li><a href="r/index.html" target="_blank" >日历</a></li>
 									<li><a href="rabbit/index.html" target="_blank" >HOLE</a></li>
 									<li><a href="tools/2-1-2.html" target="_blank" >文件合分</a></li>
-									<li><a href="tools/ABCtoCBA.html" target="_blank" >文件转码</a></li>
+									<li><a href="tools/ABCtoCBA.html" target="_blank" >文件转码（old）</a></li>
+									<li><a href="tools/FileConversion.html" target="_blank" >文件转化</a></li>
 								</ul>
 							</div>
 							<div class="inner ">
