--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<section class="panel spotlight small left" >
 							<div class="content span-9">
 								<h2 class="major">新片速递</h2>
-								<p><a href="https://movie.hotine.wang" >自己写的爬虫程序，只为不看广告:)<br />每10分钟更新一次数据，无广告。数据全部来自于其他网站，仅供自己使用！<br /><b>点此进入>>></b></a></p>
+								<p><a href="https://x.hotine.wang" >自己写的爬虫程序，只为不看广告:)<br />每10分钟更新一次数据，无广告。数据全部来自于其他网站，仅供自己使用！<br /><b>点此进入>>></b></a></p>
 							</div>
 							<div class="image filtered tinted" data-position="top left">
 								<img src="images/dybb.jpg" alt="" />
@@ -88,13 +88,13 @@
 							</div>
 							<div class="inner">
 								<ul >
-									<li><a href="nas/" target="_blank" >家里的NAS</a></li>
+									<li><a href="https://nas.hotine.wang" target="_blank" >我的网址导航</a></li>
 									<li><a href="https://pan.hotine.wang" target="_blank" >我的网盘</a></li>
 									<li><a href="matrix.html" target="_blank" >MATRIX</a></li>
 									<li><a href="r/index.html" target="_blank" >日历</a></li>
 									<li><a href="rabbit/index.html" target="_blank" >HOLE</a></li>
 									<li><a href="tools/2-1-2.html" target="_blank" >文件合分</a></li>
-									<li><a href="tools/ABCtoCBA.html" target="_blank" >文件转码（old）</a></li>
+									<!--li><a href="tools/ABCtoCBA.html" target="_blank" >文件转码（old）</a></li-->
 									<li><a href="tools/FileConversion.html" target="_blank" >文件转化</a></li>
 								</ul>
 							</div>
